# blake2_mjosref

./: CMakeLists.txt  blake2s.c  test_main.c
test/: CMakeLists.txt  test_main.c
